--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: GitHub Actions
 on:
   # Trigger the workflow on push or pull request,
-  # but only for the master branch on Push and any branches on PR
+  # but only for the main branch on Push and any branches on PR
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - '**'
@@ -35,7 +35,6 @@ jobs:
 
       - name: Install npm dependencies
         run: |
-          cd webpack-bs5-demo-with-locales
           npm install
 
       - name: Prod Build for GitHub demo website
@@ -43,7 +42,7 @@ jobs:
           npm run build
 
       - name: Deploy to gh-pages
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
